--- a/Private.html
+++ b/Private.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZEDSMS</title>
+    <title>Private-ZEDSMS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="img/Asset 1 1.png">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
@@ -105,8 +105,8 @@
         </div>
         <div class="btn-group flex justify-center items-center ">
           <a href="index.html" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-non">Shared</a>
-          <a href="Private.html" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none border-r-0">Private</a>
-          <a class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none">Temporary</a>
+          <a href="" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none border-r-0">Private</a>
+          <a href="" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none">Temporary</a>
         </div>
         </div>
         <div class="container mx-auto">
@@ -142,13 +142,14 @@
                   </li>
                 </ul>
               </div>
-              <div class="mt-16 flex justify-around items-center gap-4">
+              <div class="mt-16 gap-24 flex justify-center items-center">
+                
                 <div>
                   <div>
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Shearch" class="bg-white border-b-2 w-36 md:w-auto outline-none text-black">
                   </div>
-                  <div class=" border-r-2 mt-3">
+                  <div class=" border-r-2 mt-3 hidden md:block">
                     <ul>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 1.png" alt="">Germany</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 2.png" alt="">Lebanon</li>
@@ -160,15 +161,7 @@
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 8.png" alt="">South America</li>
                     </ul>
                 </div>
-                </div>
-
-                <div class="hidden md:block">
-                  <div>
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <input type="text" placeholder="Shearch" class="bg-white border-b-2 w-24 md:w-auto outline-none text-black">
-                  </div>
-                  <div class="border-r-2 mt-3"> 
-
+                <div class="border-r-2 mt-3 lg:hidden"> 
                     <ul>
                       <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
                         <span class="flex gap-2">
@@ -203,21 +196,21 @@
                           <img src="img/Ellipse 34 (4).png" alt="">
                           Microsoft
                         </span>
-                        <span class="">$0.35</span>
+                        <span class="px-2">$0.35</span>
                       </li>
                       <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
                         <span class="flex gap-2">
                           <img src="img/Ellipse 34 (5).png" alt="">
                           Microsoft
                         </span>
-                        <span class="">$0.35</span>
+                        <span class="px-2">$0.35</span>
                       </li>
                       <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
                         <span class="flex gap-2">
                           <img src="img/Ellipse 34 (6).png" alt="">
                           Microsoft
                         </span>
-                        <span class="">$0.35</span>
+                        <span class="px-2">$0.35</span>
                       </li>
                       <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
                         <span class="flex gap-2">
@@ -230,6 +223,7 @@
 
                   </div>
                 </div>
+                
                 <div class="hidden md:block">
                   <div>
                     <i class="fa-solid fa-magnifying-glass"></i>
