--- a/index.html
+++ b/index.html
@@ -293,14 +293,16 @@
       </section>
       <!-- Get a tour of ZEDSMS -->
 
-      <section class="container mx-auto md:flex items-center justify-around bg-white pb-32 pt-20">
-        <div class="space-y-4 sm:px-0 px-5">
+      <section class="container mx-auto pb-32 pt-20 ">
+        <div class="md:flex items-center justify-center bg-white md:px-20 px-10">
+          <div class="space-y-4 sm:px-0 px-5">
             <h1 class="text-2xl sm:text-5xl  uppercase font-bold text-black">Get a tour of ZEDSMS</h1>
             <p class="sm:text-xl">Watch the tour you just how easy it is to get <br> your messaging started.</p>
             <button class="uppercase border-2  px-7 py-5 font-bold flex items-center gap-3 rounded-lg">Watch demo<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></button>
         </div>
         <div class="sm:px-0 px-5">
             <img class="w-1/2 md:w-full py-8 md:py-0" src="img/bro.png" alt="">
+        </div>
         </div>
 
     </section>
