--- a/Private.html
+++ b/Private.html
@@ -287,7 +287,8 @@
       </section>
       <!-- Get a tour of ZEDSMS -->
 
-      <section class="container mx-auto md:flex items-center justify-around bg-white pb-32 pt-20">
+      <section class="container mx-auto pb-32 pt-20">
+       <div class="md:flex items-center justify-center bg-white md:px-20 px-10">
         <div class="space-y-4 sm:px-0 px-5">
             <h1 class="text-2xl sm:text-5xl  uppercase font-bold text-black">Get a tour of ZEDSMS</h1>
             <p class="sm:text-xl">Watch the tour you just how easy it is to get <br> your messaging started.</p>
@@ -296,6 +297,7 @@
         <div class="sm:px-0 px-5">
             <img class="w-1/2 md:w-full py-8 md:py-0" src="img/bro.png" alt="">
         </div>
+       </div>
 
     </section>
     <!-- We are available on -->
