protect your privacy section

--- a/index.html
+++ b/index.html
@@ -260,32 +260,32 @@
       </section>
 
       <!-- Why Choose Us? -->
-      <section class="container mx-auto pt-32 pb-20">
+      <section class="container mx-auto pt-32 pb-20 lg:flex justify-center items-center">
           <div class="grid sm:grid-cols-2 gap-5 justify-center items-center px-7">
-            <div class=" row-span-4">
+            <div class=" row-span-4 w-2/4 md:w-full ">
               <img src="img/cuate 2.png" alt="">
           </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                    <h3 class="text-2xl">Why Choose Us?</h3>
+                    <h3 class="text-3xl">Why Choose Us?</h3>
                     <p>Choose us for unparalleled quality, exceptional service.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">Protect Your Privacy</h3>
+                      <h3 class="text-3xl">Protect Your Privacy</h3>
                       <p>Phone number inboxes are workspaces where teams view and collaborate on contact conversations.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">You can see your log and service usage</h3>
+                      <h3 class="text-3xl">You can see your log and service usage</h3>
                       <p>Easily track conversations: record calls, transcribe voicemails, view logs all in one place.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">Contact details all in one place</h3>
+                      <h3 class="text-3xl">Contact details all in one place</h3>
                       <p>Keep track of important contact details that matter to your business with custom properties and notes.</p>
                   </div>
               </div>
