--- a/Private.html
+++ b/Private.html
@@ -259,27 +259,27 @@
             <div class=" row-span-4">
               <img src="img/cuate 2.png" alt="">
           </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                    <h3 class="text-2xl">Why Choose Us?</h3>
+                    <h3 class="text-3xl">Why Choose Us?</h3>
                     <p>Choose us for unparalleled quality, exceptional service.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">Protect Your Privacy</h3>
+                      <h3 class="text-3xl">Protect Your Privacy</h3>
                       <p>Phone number inboxes are workspaces where teams view and collaborate on contact conversations.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">You can see your log and service usage</h3>
+                      <h3 class="text-3xl">You can see your log and service usage</h3>
                       <p>Easily track conversations: record calls, transcribe voicemails, view logs all in one place.</p>
                   </div>
               </div>
-              <div class="rounded-lg flex bg-white p-7 shadow-lg space-x-6">
+              <div class="rounded-lg flex bg-white p-7 text-black space-x-6">
                   <div>
-                      <h3 class="text-2xl">Contact details all in one place</h3>
+                      <h3 class="text-3xl">Contact details all in one place</h3>
                       <p>Keep track of important contact details that matter to your business with custom properties and notes.</p>
                   </div>
               </div>
@@ -289,8 +289,8 @@
 
       <section class="container mx-auto pb-32 pt-20">
        <div class="md:flex items-center justify-center bg-white md:px-20 px-10">
-        <div class="space-y-4 sm:px-0 px-5">
-            <h1 class="text-2xl sm:text-5xl  uppercase font-bold text-black">Get a tour of ZEDSMS</h1>
+        <div class="space-y-4 sm:px-0 px-5 text-black">
+            <h1 class="text-2xl sm:text-5xl  uppercase font-bold">Get a tour of ZEDSMS</h1>
             <p class="sm:text-xl">Watch the tour you just how easy it is to get <br> your messaging started.</p>
             <button class="uppercase border-2  px-7 py-5 font-bold flex items-center gap-3 rounded-lg">Watch demo<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></button>
         </div>
@@ -302,7 +302,7 @@
     </section>
     <!-- We are available on -->
     <section class="container mx-auto flex justify-center items-center pb-20">
-      <div class="grid lg:grid-cols-5 md:grid-cols-3 grid-cols-2 gap-24">
+      <div class="grid lg:grid-cols-5 md:grid-cols-3 grid-cols-2 gap-24 text-black">
         <div class="space-y-7">
           <div>
             <img src="img/Frame 1000002019 (1).png" alt="">
@@ -347,7 +347,7 @@
     </section>
     <!-- Frequently asked questions -->
     <section class="container mx-auto pt-14 pb-24 flex justify-center items-center">
-      <div>
+      <div class="text-black">
         <div class="space-y-3 text-center pb-32">
           <h3 class="text-3xl text-black font-bold">Frequently asked questions</h3>
         <p class="text-sm">Everything you need to know about the product & services</p>
