--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
       <!-- Get a tour of ZEDSMS -->
 
       <section class="container mx-auto pb-32 pt-20 ">
-        <div class="md:flex items-center justify-center bg-white md:px-20 px-10">
-          <div class="space-y-4 sm:px-0 px-5">
-            <h1 class="text-2xl sm:text-5xl  uppercase font-bold text-black">Get a tour of ZEDSMS</h1>
+        <div class="md:flex items-center justify-center gap-20 bg-white md:px-20 px-10">
+          <div class="space-y-4 sm:px-0 px-5 text-black">
+            <h1 class="text-2xl sm:text-5xl  uppercase font-bold ">Get a tour of ZEDSMS</h1>
             <p class="sm:text-xl">Watch the tour you just how easy it is to get <br> your messaging started.</p>
             <button class="uppercase border-2  px-7 py-5 font-bold flex items-center gap-3 rounded-lg">Watch demo<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></button>
         </div>
@@ -308,7 +308,7 @@
     </section>
     <!-- We are available on -->
     <section class="container mx-auto flex justify-center items-center pb-20">
-      <div class="grid lg:grid-cols-5 md:grid-cols-3 grid-cols-2 gap-24">
+      <div class="grid lg:grid-cols-5 md:grid-cols-3 grid-cols-2 gap-24 md:gap-12 px-5 md-px-10 text-black">
         <div class="space-y-7">
           <div>
             <img src="img/Frame 1000002019 (1).png" alt="">
@@ -353,10 +353,10 @@
     </section>
     <!-- Frequently asked questions -->
     <section class="container mx-auto pt-14 pb-24 flex justify-center items-center">
-      <div>
+      <div class="w-full md:w-1/2 text-black">
         <div class="space-y-3 text-center pb-32">
           <h3 class="text-3xl text-black font-bold">Frequently asked questions</h3>
-        <p class="text-sm">Everything you need to know about the product & services</p>
+        <p class="text-2xl">Everything you need to know about the product & services</p>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
           <input type="radio" name="my-accordion-3" checked="checked" /> 
