--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="#" class=" hover:bg-gray-700 flex justify-center items-center  hover:text-white rounded-md px-5 md:px-2 sm:px-1 py-2 text-16 font-medium">Contact</a>
                         <div class="space-x-4 px-6 flex justify-center items-center">
                             <button class=" border-solid border-2 hover:bg-indigo-600 hover:text-white border-indigo-600 py-3 px-5 rounded-md font-bold text-black font-500">sing in</button>
-                        <button class="border-solid border-2 hover:bg-indigo-600 hover:text-white border-indigo-600 py-3 px-5 rounded-md font-bold text-black font-500">sing UP</button>
+                        <button class="border-solid border-2 hover:bg-indigo-600 hover:text-white border-indigo-600 py-3 px-5 rounded-md font-bold text-black font-500">sing up</button>
                         <img class="Ellipse36 w-6 h-6 rounded-full" src="img/Ellipse 36.svg" />
                         <div class=" hidden lg:flex">
                             <ul class="menu menu-horizontal px-1 ">
@@ -71,7 +71,21 @@
                 <a href="#" class="block text-white my-2">Services</a>
                 <a href="#" class="block text-white my-2">Contact</a>
                 <button class=" btn btn-primary">sing in</button>
-                <button class="border-solid border-2 btn btn-active  mt-3">sing UP</button>
+                <button class="border-solid border-2 btn btn-active  mt-3">sing up</button>
+                <img class="Ellipse36 w-6 h-6 rounded-full" src="img/Ellipse 36.svg" />
+                        <div class=" hidden lg:flex">
+                            <ul class="menu menu-horizontal px-1 ">
+                              <li tabindex="0">
+                                <details>
+                                  <summary>English</summary>
+                                  <ul class="p-2 bg-white shadow">
+                                    <li><a>Submenu 1</a></li>
+                                    <li><a>Submenu 2</a></li>
+                                  </ul>
+                                </details>
+                              </li>
+                            </ul>
+                          </div>
             </div>
             <script>
                 // Toggle mobile menu visibility
