a number sec done

--- a/Private.html
+++ b/Private.html
@@ -125,7 +125,7 @@
                   SFA
                 </span>
               </li>
-              <li class="flex items-center">
+              <li class="flex items-center px-4">
                 Service:
                 <span class="flex items-center mx-2 gap-1">
                   <img src="img/Ellipse 3400.png" alt="">
