--- a/index.html
+++ b/index.html
@@ -98,6 +98,29 @@
     <main>
       <!-- To Get A Number -->
       <section class="container mx-auto bg-white pb-20">
+        <div>
+          <div class="lg:hidden m-auto pb-6 pt-8 border-b-2 mb-8" style="max-width: 880px;">
+            <ul class="flex justify-center gap-2 text-black px-14 md:px-0">
+              <li class="flex items-center pl-7 rounded-full border-2">
+                <i class="fa-solid fa-arrow-left items-center justify-center"></i>
+              </li>
+              <li class="flex items-center">
+                Country:
+                <span class="flex items-center mx-2 gap-1">
+                  <img src="img/Ellipse 3400.png" alt="">
+                  SFA
+                </span>
+              </li>
+              <li class="flex items-center px-4">
+                Service:
+                <span class="flex items-center mx-2 gap-1">
+                  <img src="img/Ellipse 3400.png" alt="">
+                  Instagram Mafia
+                </span>
+              </li>
+            </ul>
+          </div>
+        </div>
         <div class="space-y-2">
           <div class="text-black text-center">
             <h3 class="text-3xl font-bold">To Get A Number</h3>
