a number arrwo btn done

--- a/Private.html
+++ b/Private.html
@@ -115,8 +115,8 @@
         <div>
           <div class="lg:hidden m-auto pb-6 pt-8 border-b-2 mb-8" style="max-width: 880px;">
             <ul class="flex justify-center gap-2 text-black px-14 md:px-0">
-              <li class="flex items-center pl-7 rounded-full border-2">
-                <i class="fa-solid fa-arrow-left items-center justify-center"></i>
+              <li class="mx-auto pl-7  text-center">
+                <a class="hover:bg-gray-200"  href="index.html"><i class="fa-solid fa-arrow-left rounded-full hover:border-blue-600 border-2 px-3 py-3"></i></a>
               </li>
               <li class="flex items-center">
                 Country:
