--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="btn-group flex justify-center items-center ">
           <a href="index.html" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-non">Shared</a>
           <a href="Private.html" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none border-r-0">Private</a>
-          <a class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none">Temporary</a>
+          <a href="Temporary.html" class="btn bg-white text-black hover:bg-blue-600 hover:text-white border-blue-600 border-2 focus:outline-none">Temporary</a>
         </div>
         </div>
         <div class="container mx-auto">
