--- a/Private.html
+++ b/Private.html
@@ -418,7 +418,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -427,7 +427,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -436,7 +436,7 @@
             What is your cancellation policy?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -445,7 +445,7 @@
             Can other info be added to an invoice?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -454,7 +454,7 @@
             How does billing work?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-12 sm:mr-52">
@@ -463,7 +463,7 @@
             How do I change my account email?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
       </div>
