--- a/Temporary.html
+++ b/Temporary.html
@@ -430,7 +430,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -439,7 +439,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -448,7 +448,7 @@
             What is your cancellation policy?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -457,7 +457,7 @@
             Can other info be added to an invoice?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -466,7 +466,7 @@
             How does billing work?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-12 sm:mr-52">
@@ -475,7 +475,7 @@
             How do I change my account email?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
       </div>
