--- a/index.html
+++ b/index.html
@@ -152,10 +152,15 @@
                     <input type="text" placeholder="Shearch" class="bg-white border-b-2 w-36 md:w-auto outline-none text-black">
                   </div>
                   <div class=" border-r-2 mt-3">
-                    <ul>
+                    <ul class="mt-6 overflow-y-auto h-[491px] scrollbar">
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 1.png" alt="">Germany</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 2.png" alt="">Lebanon</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 3.png" alt="">Taiwan</li>
+                      <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 4.png" alt="">Israel</li>
+                      <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 5.png" alt="">Russia</li>
+                      <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 6.png" alt="">North Africa</li>
+                      <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 7.png" alt="">Denmark</li>
+                      <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 8.png" alt="">South America</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 4.png" alt="">Israel</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 5.png" alt="">Russia</li>
                       <li class="hover:bg-gray-200 gap-2 text-black py-3 flex"> <img src="img/Ellipse 6.png" alt="">North Africa</li>
@@ -165,14 +170,42 @@
                 </div>
                 </div>
 
-                <div class="hidden md:block">
+                <div class="hidden md:block lg:w-1/4">
                   <div>
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Shearch" class="bg-white border-b-2 w-24 md:w-auto outline-none text-black">
                   </div>
                   <div class="border-r-2 mt-3"> 
 
-                    <ul>
+                    <ul class="mt-6 overflow-y-auto h-[491px] scrollbar">
+                      <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
+                        <span class="flex gap-2">
+                          <img src="img/Ellipse 34.png" alt="">
+                          Apple
+                        </span>
+                        <span class="">$0.35</span>
+                      </li>
+                      <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
+                        <span class="flex gap-2">
+                          <img src="img/Ellipse 34 (1).png" alt="">
+                          Amazon
+                        </span>
+                        <span class="">$0.35</span>
+                      </li>
+                      <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
+                        <span class="flex gap-2">
+                          <img src="img/Ellipse 34.png" alt="">
+                          Apple
+                        </span>
+                        <span class="">$0.35</span>
+                      </li>
+                      <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
+                        <span class="flex gap-2">
+                          <img src="img/Ellipse 34 (1).png" alt="">
+                          Amazon
+                        </span>
+                        <span class="">$0.35</span>
+                      </li>
                       <li class=" hover:bg-gray-200 text-black flex py-3 justify-between px-3">
                         <span class="flex gap-2">
                           <img src="img/Ellipse 34.png" alt="">
@@ -239,7 +272,12 @@
                     <input type="text" placeholder="Shearch" class="bg-white border-b-2 w-24 md:w-auto outline-none text-black">
                   </div>
                   <div class="hidden md:block border-r-2 mt-3">
-                    <ul>
+                    <ul class="mt-6 overflow-y-auto h-[491px] scrollbar scrollbr-thim-white">
+                      <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
+                      <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
+                      <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
+                      <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
+                      <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
                       <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
                       <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
                       <li class="hover:bg-gray-200 text-black py-4">+880 12321 2***5232</li>
@@ -367,7 +405,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto consequatur repellat quidem eius? Facilis quidem expedita odit dolorum. Animi, voluptatem.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -376,7 +414,7 @@
             Can I change my plan later?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -385,7 +423,7 @@
             What is your cancellation policy?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -394,7 +432,7 @@
             Can other info be added to an invoice?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-5 sm:mr-52">
@@ -403,7 +441,7 @@
             How does billing work?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
         <div class="collapse collapse-plus bg-white gap-5 mr-12 sm:mr-52">
@@ -412,7 +450,7 @@
             How do I change my account email?
           </div>
           <div class="collapse-content"> 
-            <p>hello</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt quis quos sapiente harum labore, tempora illo adipisci atque voluptatum.</p>
           </div>
         </div>
       </div>
